--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "bookshelf": "^1.2.0",
     "express": "^4.21.1",
+    "http-status-codes": "^2.3.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
   }
