--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "bookshelf": "^1.2.0",
+    "csv-parse": "^5.6.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
     "js-sha256": "^0.11.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
